--- a/Energy_Systems_Total_Cost_Optimization/CS_4E03_Energy_System_Research_Project_1.ipynb
+++ b/Energy_Systems_Total_Cost_Optimization/CS_4E03_Energy_System_Research_Project_1.ipynb
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "16d974e2",
    "metadata": {},
    "outputs": [
@@ -934,10 +934,10 @@
     {
      "data": {
       "text/plain": [
-       "4.126483817358218"
+       "422.79245966104526"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +950,7 @@
     "'''\n",
     "\n",
     "def calculate_total_cost_extra_0(capacity_threshold):\n",
-    "    if expected_jobs > capacity_thresh4old:\n",
+    "    if expected_jobs > capacity_threshold:\n",
     "        return capacity_threshold * 2 + (expected_jobs - capacity_threshold) + beta * power_consumption_sum\n",
     "    else:\n",
     "        return expected_jobs + beta * power_consumption_sum\n",
@@ -14770,12 +14770,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac1c9c2b",
+   "cell_type": "markdown",
+   "id": "eb569236",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<i>End of this section</i>"
+   ]
   }
  ],
  "metadata": {
