--- a/Energy_Systems_Optimal_Parameters_Discoveries/CS_4E03_Energy_System_Research_Project_1.ipynb
+++ b/Energy_Systems_Optimal_Parameters_Discoveries/CS_4E03_Energy_System_Research_Project_1.ipynb
@@ -14770,12 +14770,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac1c9c2b",
+   "cell_type": "markdown",
+   "id": "eb569236",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<i>End of this section</i>"
+   ]
   }
  ],
  "metadata": {
