--- a/Energy_Systems_Optimal_Parameters_Discoveries/CS_4E03_Energy_System_Research_Project_2.ipynb
+++ b/Energy_Systems_Optimal_Parameters_Discoveries/CS_4E03_Energy_System_Research_Project_2.ipynb
@@ -2866,6 +2866,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51719c91",
+   "metadata": {},
+   "source": [
+    "<p><b><a class=\"anchor\" id=\"sbs4-1\">Sub-section 1</a></b>: Binary search when mu = 1 to 500.</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "419541d5",
@@ -5036,12 +5044,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7ff5e3f",
+   "cell_type": "markdown",
+   "id": "d53b0fb4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<i>End of this section</i>"
+   ]
   }
  ],
  "metadata": {
