--- a/Federated_Learning_XAI_IoV_MDS/Part_2_Normalized_Data_MDS.ipynb
+++ b/Federated_Learning_XAI_IoV_MDS/Part_2_Normalized_Data_MDS.ipynb
@@ -21,9 +21,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3feeb6d",
+   "metadata": {},
+   "source": [
+    "<a name=\"toc\"></a>\n",
+    "## Table of Contents\n",
+    "* [Section 1: Summary of Section Structures](#1-bullet)\n",
+    "* [Section 2: Environment Setup](#2-bullet)\n",
+    "* [Section 3: Data Transformation Rules and Steps](#3-bullet)\n",
+    "* [Section 4: Generating the final dataset](#4-bullet)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb64cd88",
+   "id": "5bc4b62e",
    "metadata": {},
    "outputs": [],
    "source": []
