--- a/Federated_Learning_XAI_IoV_MDS/Part_1_Data_Analysis.ipynb
+++ b/Federated_Learning_XAI_IoV_MDS/Part_1_Data_Analysis.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "307dd106",
    "metadata": {},
    "outputs": [
@@ -2676,11 +2676,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6d1d3651",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'aclx_n':\n",
+      "[8.62295952e-04 1.07494308e-04 1.71664745e-04 ... 6.36747313e-06\n",
+      " 2.25049672e-05 6.04280690e-04]\n",
+      "Amount of distinct values in 'aclx_n':\n",
+      "2309240\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['aclx_n'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'aclx_n':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'aclx_n':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4646f2d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'aclx_n': 0.0\n",
+      "Maximum value of 'aclx_n': 0.146510027789643\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['aclx_n'].min()\n",
+    "max_value = df['aclx_n'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'aclx_n':\", min_value)\n",
+    "print(\"Maximum value of 'aclx_n':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7e618a82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'aclx_n' and their occurrences:\n",
+      "0.000000e+00    193274\n",
+      "2.196669e-07       763\n",
+      "3.581176e-03       372\n",
+      "6.910540e-04       349\n",
+      "1.275344e-05       315\n",
+      "                 ...  \n",
+      "7.707931e-09         1\n",
+      "1.405296e-03         1\n",
+      "1.783744e-05         1\n",
+      "3.404797e-05         1\n",
+      "8.721072e-05         1\n",
+      "Name: aclx_n, Length: 2309240, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['aclx_n'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'aclx_n' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c5fa4bc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'aclz': 3001534\n",
+      "Number of negative 'aclz': 0\n",
+      "Number of zero 'aclz': 193274\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_aclxn = (df['aclx_n'] > 0).sum()\n",
+    "negative_aclxn = (df['aclx_n'] < 0).sum()\n",
+    "zero_aclxn = (df['aclx_n'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'aclx_n': {positive_aclxn}\")\n",
+    "print(f\"Number of negative 'aclx_n': {negative_aclxn}\")\n",
+    "print(f\"Number of zero 'aclx_n': {zero_aclxn}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "affbc823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'acly_n':\n",
+      "[8.62295952e-04 1.04022442e-03 1.66122646e-03 ... 4.23448770e-05\n",
+      " 1.49662205e-04 4.01857863e-03]\n",
+      "Amount of distinct values in 'acly_n':\n",
+      "2309240\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['acly_n'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'acly_n':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'acly_n':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e543c05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'acly_n': 0.0\n",
+      "Maximum value of 'acly_n': 0.13358368285285602\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['acly_n'].min()\n",
+    "max_value = df['acly_n'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'acly_n':\", min_value)\n",
+    "print(\"Maximum value of 'acly_n':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2797fac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'acly_n' and their occurrences:\n",
+      "0.000000    193274\n",
+      "0.000003       763\n",
+      "0.000476       372\n",
+      "0.000078       349\n",
+      "0.000019       315\n",
+      "             ...  \n",
+      "0.001743         1\n",
+      "0.000047         1\n",
+      "0.006537         1\n",
+      "0.002921         1\n",
+      "0.000019         1\n",
+      "Name: acly_n, Length: 2309240, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['acly_n'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'acly_n' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bfb3cc9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'acly_n': 3001534\n",
+      "Number of negative 'acly_n': 0\n",
+      "Number of zero 'acly_n': 193274\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_aclyn = (df['acly_n'] > 0).sum()\n",
+    "negative_aclyn = (df['acly_n'] < 0).sum()\n",
+    "zero_aclyn = (df['acly_n'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'acly_n': {positive_aclyn}\")\n",
+    "print(f\"Number of negative 'acly_n': {negative_aclyn}\")\n",
+    "print(f\"Number of zero 'acly_n': {zero_aclyn}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8811e052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'aclz_n':\n",
+      "[0.]\n",
+      "Amount of distinct values in 'aclz_n':\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['aclz_n'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'aclz_n':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'aclz_n':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "59de06b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'aclz_n': 0.0\n",
+      "Maximum value of 'aclz_n': 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['aclz_n'].min()\n",
+    "max_value = df['aclz_n'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'aclz_n':\", min_value)\n",
+    "print(\"Maximum value of 'aclz_n':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9af225df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'aclz_n' and their occurrences:\n",
+      "0.0    3194808\n",
+      "Name: aclz_n, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['aclz_n'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'aclz_n' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cd2a5264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'aclz_n': 0\n",
+      "Number of negative 'aclz_n': 0\n",
+      "Number of zero 'aclz_n': 3194808\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_aclzn = (df['aclz_n'] > 0).sum()\n",
+    "negative_aclzn = (df['aclz_n'] < 0).sum()\n",
+    "zero_aclzn = (df['aclz_n'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'aclz_n': {positive_aclzn}\")\n",
+    "print(f\"Number of negative 'aclz_n': {negative_aclzn}\")\n",
+    "print(f\"Number of zero 'aclz_n': {zero_aclzn}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2702,11 +3013,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5c25a965",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'hedx':\n",
+      "[-0.10279024 -0.09985628 -0.10017221 ...  0.03064626  0.03064626\n",
+      "  0.02874053]\n",
+      "Amount of distinct values in 'hedx':\n",
+      "2257205\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['hedx'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'hedx':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'hedx':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "40f6a5c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'hedx': -0.999999999999422\n",
+      "Maximum value of 'hedx': 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['hedx'].min()\n",
+    "max_value = df['hedx'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'hedx':\", min_value)\n",
+    "print(\"Maximum value of 'hedx':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b2a646d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'hedx' and their occurrences:\n",
+      " 0.000000    23420\n",
+      "-0.102790     1551\n",
+      "-0.102790      892\n",
+      " 0.073949      609\n",
+      "-0.103106      390\n",
+      "             ...  \n",
+      " 0.999917        1\n",
+      " 0.965233        1\n",
+      "-0.664952        1\n",
+      "-0.709694        1\n",
+      "-0.123804        1\n",
+      "Name: hedx, Length: 2257205, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['hedx'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'hedx' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0ac22f0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'hedx': 1523733\n",
+      "Number of negative 'hedx': 1647655\n",
+      "Number of zero 'hedx': 23420\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_hedx = (df['hedx'] > 0).sum()\n",
+    "negative_hedx = (df['hedx'] < 0).sum()\n",
+    "zero_hedx = (df['hedx'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'hedx': {positive_hedx}\")\n",
+    "print(f\"Number of negative 'hedx': {negative_hedx}\")\n",
+    "print(f\"Number of zero 'hedx': {zero_hedx}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0dbaf821",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'hedy':\n",
+      "[0.99470305 0.99500187 0.99497011 ... 0.99987595 0.99953029 0.99958691]\n",
+      "Amount of distinct values in 'hedy':\n",
+      "2252837\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['hedy'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'hedy':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'hedy':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "04fc54d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'hedy': -0.9999999999999599\n",
+      "Maximum value of 'hedy': 0.9999999999997672\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['hedy'].min()\n",
+    "max_value = df['hedy'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'hedy':\", min_value)\n",
+    "print(\"Maximum value of 'hedy':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1da53184",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'hedy' and their occurrences:\n",
+      " 0.000000    23420\n",
+      " 0.994703     1568\n",
+      " 0.994703      917\n",
+      "-0.997262      609\n",
+      " 0.994670      395\n",
+      "             ...  \n",
+      " 0.031061        1\n",
+      "-0.899446        1\n",
+      "-0.170984        1\n",
+      " 0.399493        1\n",
+      "-0.713780        1\n",
+      "Name: hedy, Length: 2252837, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['hedy'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'hedy' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b812c253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'hedy': 1711075\n",
+      "Number of negative 'hedy': 1460313\n",
+      "Number of zero 'hedy': 23420\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_hedy = (df['hedy'] > 0).sum()\n",
+    "negative_hedy = (df['hedy'] < 0).sum()\n",
+    "zero_hedy = (df['hedy'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'hedy': {positive_hedy}\")\n",
+    "print(f\"Number of negative 'hedy': {negative_hedy}\")\n",
+    "print(f\"Number of zero 'hedy': {zero_hedy}\")"
+   ]
   },
   {
    "cell_type": "markdown",
