--- a/Federated_Learning_XAI_IoV_MDS/Part_1_Data_Analysis.ipynb
+++ b/Federated_Learning_XAI_IoV_MDS/Part_1_Data_Analysis.ipynb
@@ -3231,6 +3231,424 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "391605ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'hedz':\n",
+      "[0.]\n",
+      "Amount of distinct values in 'hedz':\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['hedz'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'hedz':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'hedz':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "96bb7b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'hedz': 0.0\n",
+      "Maximum value of 'hedz': 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['hedz'].min()\n",
+    "max_value = df['hedz'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'hedz':\", min_value)\n",
+    "print(\"Maximum value of 'hedz':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f63596bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'hedz' and their occurrences:\n",
+      "0.0    3194808\n",
+      "Name: hedz, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['hedz'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'hedz' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bf9bd267",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'hedz': 0\n",
+      "Number of negative 'hedz': 0\n",
+      "Number of zero 'hedz': 3194808\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_hedy = (df['hedz'] > 0).sum()\n",
+    "negative_hedy = (df['hedz'] < 0).sum()\n",
+    "zero_hedy = (df['hedz'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'hedz': {positive_hedy}\")\n",
+    "print(f\"Number of negative 'hedz': {negative_hedy}\")\n",
+    "print(f\"Number of zero 'hedz': {zero_hedy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cde660fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'hedx_n':\n",
+      "[20.03821806 20.44113879 20.85047276 ... 22.86614782 21.72585221\n",
+      " 20.31964012]\n",
+      "Amount of distinct values in 'hedx_n':\n",
+      "2243416\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['hedx_n'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'hedx_n':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'hedx_n':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4471f302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'hedx_n': 0.0\n",
+      "Maximum value of 'hedx_n': 121.30637235838086\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['hedx_n'].min()\n",
+    "max_value = df['hedx_n'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'hedx_n':\", min_value)\n",
+    "print(\"Maximum value of 'hedx_n':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c117d7d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'hedx_n' and their occurrences:\n",
+      "0.000000     23467\n",
+      "0.917505       465\n",
+      "4.835158       379\n",
+      "1.514144       349\n",
+      "4.506546       345\n",
+      "             ...  \n",
+      "2.734250         1\n",
+      "1.921980         1\n",
+      "0.361792         1\n",
+      "40.290294        1\n",
+      "1.939147         1\n",
+      "Name: hedx_n, Length: 2243416, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['hedx_n'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'hedx_n' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "42c18eb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'hedx_n': 3171341\n",
+      "Number of negative 'hedx_n': 0\n",
+      "Number of zero 'hedx_n': 23467\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_hedxn = (df['hedx_n'] > 0).sum()\n",
+    "negative_hedxn = (df['hedx_n'] < 0).sum()\n",
+    "zero_hedxn = (df['hedx_n'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'hedx_n': {positive_hedxn}\")\n",
+    "print(f\"Number of negative 'hedx_n': {negative_hedxn}\")\n",
+    "print(f\"Number of zero 'hedx_n': {zero_hedxn}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "77a60f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'hedy_n':\n",
+      "[17.54100051 14.46728277 11.94152821 ...  5.57825432  7.8386282\n",
+      " 12.2320665 ]\n",
+      "Amount of distinct values in 'hedy_n':\n",
+      "2243416\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['hedy_n'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'hedy_n':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'hedy_n':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fe0d9457",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'hedy_n': 0.0\n",
+      "Maximum value of 'hedy_n': 113.69652199869229\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['hedy_n'].min()\n",
+    "max_value = df['hedy_n'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'hedy_n':\", min_value)\n",
+    "print(\"Maximum value of 'hedy_n':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "24cb0d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'hedy_n' and their occurrences:\n",
+      "0.000000     23467\n",
+      "3.896261       465\n",
+      "4.835158       379\n",
+      "1.514144       349\n",
+      "4.506546       345\n",
+      "             ...  \n",
+      "45.237567        1\n",
+      "6.603863         1\n",
+      "1.401621         1\n",
+      "3.213351         1\n",
+      "12.692880        1\n",
+      "Name: hedy_n, Length: 2243416, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['hedy_n'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'hedy_n' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8d55e954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'hedy_n': 3171341\n",
+      "Number of negative 'hedy_n': 0\n",
+      "Number of zero 'hedy_n': 23467\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_hedyn = (df['hedy_n'] > 0).sum()\n",
+    "negative_hedyn = (df['hedy_n'] < 0).sum()\n",
+    "zero_hedyn = (df['hedy_n'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'hedy_n': {positive_hedyn}\")\n",
+    "print(f\"Number of negative 'hedy_n': {negative_hedyn}\")\n",
+    "print(f\"Number of zero 'hedy_n': {zero_hedyn}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0815f6d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distinct values of 'hedz_n':\n",
+      "[0.]\n",
+      "Amount of distinct values in 'hedz_n':\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_values = df['hedz_n'].unique()\n",
+    "\n",
+    "print(f\"Distinct values of 'hedz_n':\")\n",
+    "print(distinct_values)\n",
+    "\n",
+    "print(f\"Amount of distinct values in 'hedz_n':\")\n",
+    "print(len(distinct_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3a8dea44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum value of 'hedz_n': 0.0\n",
+      "Maximum value of 'hedz_n': 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_value = df['hedz_n'].min()\n",
+    "max_value = df['hedz_n'].max()\n",
+    "\n",
+    "print(\"Minimum value of 'hedz_n':\", min_value)\n",
+    "print(\"Maximum value of 'hedz_n':\", max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1b984f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most frequent values of 'hedz_n' and their occurrences:\n",
+      "0.0    3194808\n",
+      "Name: hedz_n, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_frequent_values = df['hedz_n'].value_counts()\n",
+    "\n",
+    "print(\"Most frequent values of 'hedz_n' and their occurrences:\")\n",
+    "print(most_frequent_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2e03e644",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive 'hedz_n': 0\n",
+      "Number of negative 'hedz_n': 0\n",
+      "Number of zero 'hedz_n': 3194808\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_hedzn = (df['hedz_n'] > 0).sum()\n",
+    "negative_hedzn = (df['hedz_n'] < 0).sum()\n",
+    "zero_hedzn = (df['hedz_n'] == 0).sum()\n",
+    "\n",
+    "print(f\"Number of positive 'hedz_n': {positive_hedzn}\")\n",
+    "print(f\"Number of negative 'hedz_n': {negative_hedzn}\")\n",
+    "print(f\"Number of zero 'hedz_n': {zero_hedzn}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a84e8aad",
    "metadata": {},
